# a2_rs_controller

./: .gitignore  .gitmodules  README.md  compose.yaml  install.sh  setup.sh
src/a2_rl_controller/: CMakeLists.txt  package.xml
src/a2_rl_controller/src/: a2_rl_controller_node.cpp
src/core/a2_unitree_bridge/: .clang-format  CMakeLists.txt  README.md  package.xml
src/core/a2_unitree_bridge/include/: bridge.hpp
src/core/a2_unitree_bridge/include/common/: converters.hpp  egress.hpp  ingress.hpp
src/core/a2_unitree_bridge/include/robot/: command_egress.hpp  ingress.hpp
src/core/a2_unitree_bridge/include/sim/: converters.hpp  egress.hpp  ingress.hpp
src/core/a2_unitree_bridge/launch/: robot.launch.py  sim.launch.py
src/core/a2_unitree_bridge/src/: bridge.cpp  node.cpp
src/core/a2_unitree_bridge/src/robot/: command_egress.cpp
src/meta_packages/a2_pc2/launch/: pc2.launch.py
src/meta_packages/a2_ros/: CMakeLists.txt
src/meta_packages/a2_ros/config/: twist_mux_config.yaml
src/meta_packages/a2_ros/launch/: exploration.launch.py  navigation.launch.py  nuc.launch.py  sim.launch.py
src/meta_packages/a2_ros/rviz/: navigation.rviz
src/meta_packages/a2_ros/src/: nav_vel_relay.cpp  teleop_joy.cpp
