<?xml version="1.0"?>
<?xml-model href="" schematypens=""?>
<package format="3">
  <name>a2_unitree_bridge</name>
  <version>0.0.0</version>
  <description>Unitree DDS to ROS2 Bridge for both Simulation and Robot</description>
  <maintainer email="44103483+rbharadwaj9@users.noreply.github.com">Rajiv Bharadwaj</maintainer>
  <license>BSD 3-Clause License</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>camera_info_manager</depend>
  <depend>nav_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_sensor_msgs</depend>
  <depend>unitree_go</depend>
  <depend>unitree_hg</depend>
  <depend>ament_index_cpp</depend>
  <depend>a2_utils</depend>
  <!-- a2_bridge_sim resolves package://a2_description/config/camera_info_sim.yaml at runtime -->
  <exec_depend>a2_description</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
